--- a/lib/dune
+++ b/lib/dune
@@ -1,6 +1,7 @@
 (library
  (name hypergraphs)
- (libraries vg))
+ (libraries vg)
+ (modules_without_implementation types))
 
 (menhir (modules parser))
 (ocamllex lexer)
