--- a/bin/dune
+++ b/bin/dune
@@ -2,15 +2,15 @@
  (public_name hg-locate)
  (name locate)
  (modules locate)
- (libraries hypergraphs hypergraphs_gtk hypergraphs_place hypergraphs_cairo))
+ (libraries hypergraphs hypergraphs_gtk))
+
+(executable
+ (public_name hg)
+ (modules hg)
+ (libraries hypergraphs))
 
 (executable
  (public_name scales)
  (name scales)
  (modules scales)
  (libraries vg.cairo))
-
-(executable
- (public_name hg)
- (modules hg)
- (libraries hypergraphs hypergraphs_place hypergraphs_cairo))
