--- a/lib/dune
+++ b/lib/dune
@@ -1,15 +1,19 @@
 (library
  (name hypergraphs)
- (libraries vg.cairo)
+ (libraries vg unix)
  (modules_without_implementation types)
 ; (flags -w -27)
-(modules :standard \ gArena)
- )
+ (modules :standard \ gArena file))
 
 (menhir (modules parser))
 (ocamllex lexer)
 
 (library
+ (name hypergraphs_cairo)
+ (libraries hypergraphs vg.cairo)
+ (modules file))
+
+(library
  (name hypergraphs_gtk)
- (libraries hypergraphs cairo2-gtk)
+ (libraries hypergraphs_cairo cairo2-gtk)
  (modules gArena))
